# picterm

./: .gitignore  Makefile.am  README.md  configure.ac  picterm.1
.github/workflows/: ci.yml
src/: image.cpp  image.hpp  image_ldr.cpp  image_ldr.hpp  main.cpp  viewer.cpp  viewer.hpp  x11.cpp  x11.hpp
